[gd_scene format=3 uid="uid://cjdkmqlkwnn3b"]

[ext_resource type="Script" uid="uid://nmsbi5c21cxq" path="res://card/card_view.gd" id="1_2nlio"]
[ext_resource type="Texture2D" uid="uid://dehqyg61rlqbt" path="res://card/assets/sheet.png" id="2_4bpaw"]
[ext_resource type="Shader" uid="uid://c2kfwnkkt8ge8" path="res://shaders/card.gdshader" id="2_ncspy"]
[ext_resource type="Script" uid="uid://cw12ktjdt7lyy" path="res://interactions/drag/drag_component.gd" id="3_f2o64"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m3lw8"]
shader = ExtResource("2_ncspy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ncspy"]
size = Vector2(40, 60)

[node name="CardView" type="Node2D" unique_id=1218889746 node_paths=PackedStringArray("sprite_2d", "drag_component")]
script = ExtResource("1_2nlio")
sprite_2d = NodePath("Sprite2D")
drag_component = NodePath("DragComponent")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=382725119]
material = SubResource("ShaderMaterial_m3lw8")
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_4bpaw")
hframes = 10
vframes = 5
frame = 49

[node name="DragComponent" type="Area2D" parent="." unique_id=1899036405]
script = ExtResource("3_f2o64")
metadata/_custom_type_script = "uid://cw12ktjdt7lyy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragComponent" unique_id=1155276474]
visible = false
shape = SubResource("RectangleShape2D_ncspy")

[connection signal="drag_ended" from="DragComponent" to="." method="_on_drag_ended"]
[connection signal="drag_started" from="DragComponent" to="." method="_on_drag_started"]
[connection signal="drop_zone_entered" from="DragComponent" to="." method="_on_drop_zone_entered"]
[connection signal="drop_zone_exited" from="DragComponent" to="." method="_on_drop_zone_exited"]
